deploy/kubernetes/ui/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
  labels:
    app: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: omoknooni/kubestock-ui:78d521e
        ports:
        - containerPort: 80
