deploy/kubernetes/ui/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  labels:
    app: ui
spec:
  type: LoadBalancer  # need to expose externally
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: ui
