deploy/kubernetes/ui/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-service
                port:
                  number: 80
          - path: /api/stocks(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: stocks-service
                port:
                  number: 80
          - path: /api/news(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: news-service
                port:
                  number: 80
          - path: /api/backtest(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backtest-service
                port:
                  number: 80
